# paper_to_scrapbox

./: .env.example  .gitignore  README.md  paper_summary.py  pyproject.toml  requirements.txt  summarization_prompt.txt  test_integration_paper_summary.py  test_paper_summary.py  title_prompt.txt
extension/: background.js  manifest.json  offscreen.html  offscreen.js  popup.html  popup.js  summarization_prompt.txt  title_prompt.txt
